--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -d && copy src\\index.html dist\\index.html && webpack-dev-server --content-base src\\ --inline --hot",
+    "build": "webpack -d && copy src\\index.html dist\\index.html && webpack-dev-server --content-base src\\ --inline --hot --history-api-fallback",
     "build:prod": "webpack -p && copy src\\index.html dist\\index.html",
     "dev": "webpack-dev-server --content-base src --inline --hot"
   },
@@ -22,8 +22,9 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "history": "^1.17.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^4.2.0"
+    "react-router": "^2.8.1"
   }
 }
